# System_Integration_SD22w_2022

./: .gitignore  README.md
0._Miscellaneous/: index.html
1._file_types/: movie  movie.csv  movie.json  movie.xml  movie.yml  package-lock.json  package.json  parser.js  parser.py
1._file_types/node/: main.js  package.json
1._file_types/node/routers/: parseRouter.js
1._file_types/python/: main.py  pyproject.toml
1._file_types/python/libs/: Parser.py  __init__.py
2._modules/: encode.js
2._modules/node/: app.js  package.json
2._modules/node/public/: duck.html  duckFactoryLib.js  motherDuck.js
2._modules/python/: main.py
2._modules/python/libs/: LibraryA.py  LibraryB.py  __init__.py
3._python_environments/pipenv/: main.py
3._python_environments/poetry/: main.py  pyproject.toml
5._FastAPI/: main.py  pyproject.toml
6._Environment_variables/node/: main.js  package.json
6._Environment_variables/python/: main.py  pyproject.toml
7._Date_servers/node/: main.js
7._Date_servers/python/: main.py  pyproject.toml
8._Rest_API_Documentation/express_swagger/: app.js  package-lock.json  package.json
8._Rest_API_Documentation/express_swagger/routers/: movies.js  users.js
8._Rest_API_Documentation/fastapi_swagger/: main.py  pyproject.toml
9._Webhooks/node_github_webhook/: app.js
9._Webhooks/python_webhooks/: main.py  pyproject.toml  webhook.py
