[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Marianna <mana998@azet.sk>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
